--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
   ],
   "rules": {
     "no-useless-constructor": "off",
-    "no-empty-function": "off"
+    "no-empty-function": "off",
+    "no-empty-interface": "off"
   },
   "env": {
     "vitest-globals/env": true
