--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
   "rules": {
     "no-useless-constructor": "off",
     "no-empty-function": "off",
-    "no-empty-interface": "off"
+    "no-empty-interface": "off",
+    "no-new": "off"
   },
   "env": {
     "vitest-globals/env": true
